small bugfix for wait spinner (overlapped by dataviewer)

--- a/default.css
+++ b/default.css
@@ -156,7 +156,7 @@ a.button.disabled {
 .modal {
   display: none;
   position: fixed;
-  z-index: 1000;
+  z-index: 1007;
   top: 0;
   left: 0;
   width: 100%;
